[project]
name = "AI_testhub"
version = "0.1.0"
description = "A minimal learning project extracted from TestHub ai_base/ai_agent concepts."
requires-python = ">=3.11,<4.0"
dependencies = []

[project.optional-dependencies]
real = [
  "langchain-openai",
  "browser-use",
  "python-dotenv",
  "socksio",
]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
